# FlacCompagnon

./: . editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  app.js  index.html  package-lock.json  package.json  sitemap.xml  styles.css  vite.config.ts
.github/workflows/: ci.yml  docs.yml  release.yml  site.yml
assets/fonts/: fetch-fonts.sh
core/: Cargo.toml
core/src/: analyzer.rs  bitdepth.rs  clipping.rs  decode.rs  detections.rs  dsd.rs  flac_md5.rs  lib.rs  mdct.rs  report.rs  requant.rs  spectrum.rs  stereo.rs  truepeak.rs  verdict.rs
core/tests/: integration.rs  requant_toy.rs
doc/: crates.js  help.html  index.html  settings.html  src-files.js
doc/flaccompagnon_core/: all.html  constant.SUPPORTED_EXTENSIONS.html  enum.AnalysisError.html  fn.analyze_file.html  fn.analyze_folder.html  fn.is_supported_audio.html  fn.list_audio_files.html  index.html  sidebar-items.js  struct.ClippingInfo.html  struct.FileAnalysis.html  struct.FolderReport.html  struct.ScanOptions.html
doc/flaccompagnon_core/analyzer/: index.html  sidebar-items.js  struct.AnalysisSummary.html  struct.StreamAnalyzer.html
doc/flaccompagnon_core/bitdepth/: fn.effective_bits.html  fn.is_fake_hires.html  index.html  sidebar-items.js
doc/flaccompagnon_core/clipping/: index.html  sidebar-items.js  struct.ClipState.html
doc/flaccompagnon_core/decode/: fn.detect_container.html  (+9 more)
doc/search.index/: 02b25a946b.js  04be16beb8.js  057f62d3b2.js  05eac3bf3c.js  07b57e52d5.js  0870158cbb.js  09a521f2a2.js  0a7f4be4a8.js  0d14158f52.js  0d40484c38.js  12475716e9.js  14c6851594.js  1503622231.js  1d09af3567.js  1e44070175.js  1ef167fe28.js  21bef3732b.js  2c62126039.js  2c6351c73d.js  3010afa7fb.js  3605f55881.js  36f7e13c77.js  377c27ec6d.js  377e7bca7f.js  3a39fe35e1.js  3afe3d0821.js  3b1bb8a77a.js  3b401c228b.js  3c090e9581.js  3d5c8994d7.js  3e4e1d464c.js  3eab6aaf62.js  4098ae7423.js  40ed839464.js  45700accb9.js  4844314be5.js  48532a3b10.js  4a86ab3929.js  4af58e1eeb.js  4cdeb0e91d.js  (+21 more)
site/: app.js  index.html  robots.txt  styles.css
src/: api.ts  format.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  spectrogram.rs
(+113 files in other folders)
