# Cargo workspace for FlacCompagnon.
#
# `core`      -> pure Rust analysis library (no Tauri dependency, fully unit-testable)
# `src-tauri` -> the Tauri desktop application that wraps `core`
[workspace]
members = ["core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["FlacCompagnon contributors"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
