[package]
name = "flaccompagnon"
description = "Desktop lossless-audio integrity checker (upsampling/transcode detection, FLAC MD5, spectrograms)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "flaccompagnon"

[lib]
name = "flaccompagnon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flaccompagnon-core = { path = "../core" }
